--- a/pom.xml
+++ b/pom.xml
@@ -1,57 +1,54 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
-    <groupId>org.jlab.calib.services</groupId>
-    <artifactId>clascalib-cnd</artifactId>
-    <version>1.2-SNAPSHOT</version>
-    <name>${artifactId}-${version}</name>
-
-
-    <repositories>
-        <repository>
-            <id>clas12maven</id>
-            <url>https://clasweb.jlab.org/clas12maven</url>
-        </repository>
-    </repositories>
-
-    <dependencies>
-        <dependency>
-            <groupId>org.jlab.coat</groupId>
-            <artifactId>coat-libs</artifactId>
-            <version>6.6.2-SNAPSHOT</version>
-        </dependency>
-    </dependencies>
-
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-assembly-plugin</artifactId>
-                <version>3.1.0</version>
-                <executions>
-                    <execution>
-                        <phase>package</phase> <!-- bind to the packaging phase -->
-                        <goals>
-                            <goal>single</goal>
-                        </goals>
-                        <configuration>
-                            <descriptorRefs>
-                                <descriptorRef>jar-with-dependencies</descriptorRef>
-                            </descriptorRefs>
-                            <archive>
-                                <manifest>
-                                    <mainClass>org.jlab.calib.services.cnd.CNDCalibration</mainClass>
-                                </manifest>
-                            </archive>
-                            <finalName>${name}</finalName>
-                            <appendAssemblyId>false</appendAssemblyId>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
-        </plugins>
-    </build>
-    <properties>
-        <maven.compiler.source>1.8</maven.compiler.source>
-        <maven.compiler.target>1.8</maven.compiler.target>
-    </properties>
+  <modelVersion>4.0.0</modelVersion>
+  <groupId>org.jlab.calib.services</groupId>
+  <artifactId>clascalib-cnd</artifactId>
+  <version>1.2-SNAPSHOT</version>
+  <name>${artifactId}-${version}</name>
+  <repositories>
+    <repository>
+      <id>clas12maven</id>
+      <url>https://clasweb.jlab.org/clas12maven</url>
+    </repository>
+  </repositories>
+  <dependencies>
+    <dependency>
+      <groupId>org.jlab.coat</groupId>
+      <artifactId>coat-libs</artifactId>
+      <version>6.6.2-SNAPSHOT</version>
+    </dependency>
+  </dependencies>
+  <build>
+    <plugins>
+      <plugin>
+	<groupId>org.apache.maven.plugins</groupId>
+	<artifactId>maven-assembly-plugin</artifactId>
+	<version>3.1.0</version>
+	<executions>
+	  <execution>
+	    <phase>package</phase>
+	    <!--  bind to the packaging phase  -->
+	    <goals>
+	      <goal>single</goal>
+	    </goals>
+	    <configuration>
+	      <descriptorRefs>
+		<descriptorRef>jar-with-dependencies</descriptorRef>
+	      </descriptorRefs>
+	      <archive>
+		<manifest>
+		  <mainClass>org.jlab.calib.services.cnd.CNDCalibration</mainClass>
+		</manifest>
+	      </archive>
+	      <finalName>${name}</finalName>
+	      <appendAssemblyId>false</appendAssemblyId>
+	    </configuration>
+	  </execution>
+	</executions>
+      </plugin>
+    </plugins>
+  </build>
+  <properties>
+    <maven.compiler.source>1.8</maven.compiler.source>
+    <maven.compiler.target>1.8</maven.compiler.target>
+  </properties>
 </project>
